fix: vars/paddings

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -14,13 +14,10 @@ $white : #ffffff;
 
 // *paddings
 
-$card-padding-sm{
-  padding: 1rem;
-}
+$card-padding-sm: 1rem;
 
-$card-padding-md{
-  padding: 2rem;
-}
+$card-padding-md: 2rem;
+
 
 // !MIXIN------------------------------------------
 
