--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -15,7 +15,6 @@ $white : #ffffff;
 // *paddings
 
 $card-padding-sm: 1rem;
-
 $card-padding-md: 2rem;
 
 
@@ -43,4 +42,12 @@ $card-padding-md: 2rem;
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+@mixin btn($color){
+  border: 2px solid $color;
+  border-radius: 1rem;
+  color: $color;
+  padding: 1rem 1.2rem;
+  text-decoration: none;
 }
