--- a/templates/team.html.twig
+++ b/templates/team.html.twig
@@ -1,4 +1,5 @@
-<section class="team">
+{% block main %}
+<main class="team">
   <h1 class="team__title"></h1>
 
   <div class="team__cards-container">
@@ -10,4 +11,5 @@
       <a href="">DECOUVREZ</a>
     </div>
   </div>
-</section>
+</main>
+{% endblock %}
