--- a/templates/teams.html.twig
+++ b/templates/teams.html.twig
@@ -1,4 +1,5 @@
-<section class="teams">
+{% block main %}
+<main class="teams">
   <h1 class="teams__title">LES TEAMS DE LA LEAGUE</h1>
 
   <div class="teams__cards-container">
@@ -11,4 +12,5 @@
       <a href="">DECOUVREZ</a>
     </div>
   </div>
-</section>
+</main>
+{% endblock %}
