feat: players page

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -36,6 +36,7 @@ $card-padding-md: 2rem;
   font-weight: 700;
   font-size: $font-size;
   color: color;
+  text-transform: uppercase;
 }
 
 @mixin card-img{
